--- a/styles.css
+++ b/styles.css
@@ -2,20 +2,133 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "Acme";
 }
-@font-face {
-  font-family: Moanas;
-  src: url(./Moanas.ttf);
+.marca {
+  color: #4d917a;
 }
-.font-manrope {
-  font-family: "Manrope", sans-serif;
+.max-w-90 {
+  max-width: 100vw;
 }
-.font-acme {
-  font-family: "Acme", sans-serif;
+.avoiding-scroll {
+  height: 100%;
+  overflow: hidden;
 }
-.font-edu {
-  font-family: "Edu QLD Beginner", cursive;
+
+.font-paris {
+  font-family: "Parisienne", cursive;
+}
+.text-shadow {
+  text-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+.title2 {
+  font-size: 2.5rem;
+}
+
+.test-class {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+}
+
+/* data-aos-duration="3000" */
+/* sobre */
+.sobre {
+  height: 100vh;
+  width: 80vw;
+  /* z-index: 1; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.bg-dark-black {
+  background-color: #242321;
+}
+
+.animate__animated.animate__fadeOut {
+  --animate-duration: 0.05s;
+}
+.animate__animated .animate__pulse {
+  --animate-duration: 3s;
+}
+
+.z-index-3 {
+  position: absolute;
+  bottom: 50vh;
+  height: 40vh;
+  top: 20vh;
+  z-index: 3;
+  display: block;
+  min-width: 100%;
+  max-width: 100%;
+  border-style: none;
+}
+.z-index-2 {
+  position: absolute;
+  bottom: 20vh;
+  height: 50vh;
+  z-index: 2;
+  display: block;
+  min-width: 100%;
+  max-width: 100%;
+  border-style: none;
+}
+.owl-carousel .owl-nav button.owl-next,
+.owl-carousel .owl-nav button.owl-prev {
+  box-shadow: none !important;
+  transition: none !important;
+}
+
+.btn-open {
+  box-shadow: none !important;
+  transition: none !important;
+  position: absolute;
+  z-index: 4;
+  background-color: rgba(240, 255, 255, 0);
+  border: none;
+  text-decoration: none;
+}
+.btn-open:focus {
+  outline: none;
+}
+.btn-open img {
+  height: 40%;
+  width: 40%;
+  padding-bottom: 4rem;
+}
+.hide {
+  visibility: hidden;
+  max-height: 0vw;
+}
+
+.visibility {
+  visibility: hidden;
+}
+/* home */
+.invitacion {
+  width: 100vw;
+}
+.home {
+  height: 100vh;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  background-image: linear-gradient(
+      rgba(5, 7, 12, 0.308),
+      rgba(5, 7, 12, 0.335)
+    ),
+    url("./assets/img/esposos2.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top;
+}
+.name {
+  width: 80%;
+  padding-right: 0;
+  padding-top: 7rem;
 }
 /* audio */
 .player-audio {
@@ -23,10 +136,9 @@
 }
 .player-icon {
   font-size: 2rem;
-  box-shadow: rgba(49, 48, 48, 0.934) 0px 54px 55px,
-    rgba(245, 229, 229, 0.959) 0px -12px 30px,
-    rgba(221, 218, 218, 0.12) 0px 4px 6px,
-    rgba(255, 252, 252, 0.205) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   border-radius: 100%;
 }
 .player-btn {
@@ -39,487 +151,436 @@
   cursor: pointer;
   border-radius: 50%;
   justify-content: center;
-  z-index: 8;
+  z-index: 9;
 }
-
 .player-btn:hover {
   cursor: pointer;
 }
-/* SOBRE */
-.sobre {
-  height: 100vh;
-  width: 80vw;
-  /* z-index: 1; */
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.img-logo-coppel {
+  width: 50%;
+  height: 50%;
 }
-
-.z-index-3 {
-  position: absolute;
-  height: 50vh;
-  top: 10vh;
-  z-index: 3;
-  display: block;
-  min-width: 100%;
-  max-width: 100%;
-  vertical-align: middle;
-  border-style: none;
-}
-.z-index-2 {
-  position: absolute;
-  bottom: 10vh;
-  height: 60vh;
-  z-index: 2;
-  display: block;
-  min-width: 100%;
-  max-width: 100%;
-  vertical-align: middle;
-  border-style: none;
-}
-
-.btn-open {
-  position: absolute;
-  z-index: 4;
-  border: none;
-  background-color: rgba(0, 0, 0, 0);
-  text-decoration: none;
-  border: none;
-}
-
-.visibility {
-  visibility: hidden;
-}
-.logo {
-  width: 100px;
-  height: 100px;
-}
-/* inivtacion */
-.fondo {
+/*  window-bg*/
+.second-section {
   height: min-content;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  background-image: linear-gradient(
-      rgba(5, 7, 12, 0.366),
-      rgba(5, 7, 12, 0.256)
-    ),
-    url("./assets/img/chofis/background-naty-4.png");
+  max-width: 100%;
+  background-image: url("./assets/img/andre-jackson-IXLS59CTgDE-unsplash.jpg");
+  background-size: cover;
   background-attachment: fixed;
-  background-size: cover;
   background-repeat: no-repeat;
   background-position: bottom;
-  position: relative;
-  z-index: 9;
 }
-
-.img1 {
-  width: 80%;
+.second-section .container {
+  background-color: rgb(255, 255, 255);
+  height: 100%;
+  padding: 1rem 0;
+  min-width: 100%;
 }
-.text-white {
-  text-shadow: 3px 1px 1px rgba(20, 17, 17, 0.747);
+.second-section .container2 {
+  background-image: linear-gradient(
+      rgba(5, 7, 12, 0.493),
+      rgba(5, 7, 12, 0.335)
+    ),
+    url("./assets/img/esposos7.jpg");
+  height: 60vh;
+  width: auto;
+  background-color: rgba(0, 0, 0, 0.575);
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-size: cover;
 }
-.shadow {
-  text-shadow: 3px 1px 3px rgba(246, 246, 246, 0.747);
+.second-section .container3 {
+  background-color: rgb(255, 255, 255);
+  height: min-content;
 }
-.display-1 {
-  font-size: 3rem !important;
-  text-shadow: 3px 1px 1px rgba(20, 17, 17, 0.747);
-}
-.display-2 {
-  font-size: 3rem !important;
-  text-shadow: 3px 1px 1px rgba(20, 17, 17, 0.747);
-}
-.home {
-  height: 100vh;
-}
-
-.btn-open:focus {
-  outline: none;
-}
-
-.tira {
+.decoration {
   width: 200px;
-  height: 5vh;
-  margin-top: 5rem;
 }
-.tira2 {
-  height: 5vh;
-  margin-top: 5rem;
+.display-4 {
+  font-size: 3rem;
 }
-.home2 {
-  height: 100%;
-  padding: 0rem 0rem 10rem 0rem;
+.display-6 {
+  font-size: 1.2rem;
+  letter-spacing: 2px;
+  padding: 0 2rem;
 }
-.home4 {
-  padding: 4rem 2rem;
-  height: 100%;
-}
-
-.w-80 {
-  width: 80%;
-}
-.txt-aqua {
-  color: #22b9df;
-}
-/* frase */
-.bg-aqua {
-  background-color: rgb(34, 217, 223);
-}
-.bg-aqua2 {
-  background-color: rgb(120, 209, 218);
-}
-.home-frase {
-  height: 100%;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  background-color: rgb(183, 203, 247);
-  /* background-image: url("./assets/img/chofis/background-naty-3.png"); */
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: bottom;
-  position: relative;
-}
-.phrase {
-  width: 80%;
-}
-.animate-text {
-  opacity: 0;
-  transition: all 2.5s;
-}
-.appear-text {
-  animation: appear-text 2s;
-}
-@keyframes appear-text {
-  0% {
-    transform: translateY(20%);
-  }
-  100% {
-    transform: translateY(0);
-  }
-}
-.animate-text {
-  --animate-duration: 2.5s;
-}
-.img2 {
-  width: 100%;
-}
-/* fecha */
-.img-fecha {
-  height: 40vh;
-  width: 100%;
-  padding-top: 2rem;
-  margin-bottom: 2rem;
+.cuenta-regresiva {
+  text-align: center;
+  font-size: 1.1rem;
+  color: rgba(240, 248, 255, 0.849);
 }
 .cuenta {
   display: flex;
-  justify-content: space-around;
-  width: 100%;
-}
-.faltan {
-  text-shadow: 1px 1px 2px rgba(20, 17, 17, 0.507);
-}
-.text-fecha {
-  font-size: 3rem;
-  color: white;
-}
-.cuenta-regresiva {
-  font-family: "Acme", sans-serif;
-  text-align: center;
-  font-size: 1.5rem;
-  color: whitesmoke;
-  text-shadow: 1px 1px 2px rgba(20, 17, 17, 0.507);
+  justify-content: center;
+  width: 60%;
 }
 .txt-pink {
-  font-size: 3rem;
-  color: rgba(223, 104, 110, 0.979);
-  text-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px;
+  font-size: 1rem;
+  color: cornsilk;
+  text-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
-.display-6 {
-  font-size: 2rem;
-}
-/* ubicacion */
-.home5 {
-  height: 60vh;
-  margin: 0;
-  padding: 0;
+hr {
+  width: 30%;
+  border: 0;
+  height: 1px;
   background-image: linear-gradient(
-      rgba(5, 7, 12, 0.274),
-      rgba(5, 7, 12, 0.171)
-    ),
-    url("./assets/img/chofis/ubicacion.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  position: relative;
+    to right,
+    #f0f0f02f,
+    #000000b6,
+    #000000b6,
+    #f0f0f02f
+  );
 }
-.ubicacion {
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  background-color: rgb(230, 193, 219);
-  /* background-image: url("./assets/img/chofis/background-naty-3.png"); */
+.icon-mp4 {
+  width: 50px;
+}
+/* Pase */
+.pase {
+  background-color: rgba(189, 188, 188, 0.29);
+  height: min-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+  text-align: center;
+  letter-spacing: 2px;
+}
+.font-icon {
+  font-size: 1.2rem;
+}
+.font-gold {
+  color: rgb(168, 143, 105);
+}
+/* itinerario */
+.itinerario {
+  height: 60vh;
+  background-image: linear-gradient(
+      rgba(5, 7, 12, 0.277),
+      rgba(5, 7, 12, 0.277)
+    ),
+    url("./assets/img/salon3.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: bottom;
-  position: relative;
-  font-family: "Edu QLD Beginner", cursive;
-  padding: 1.5rem 1.5rem 4rem 1.5rem;
 }
-.animate-right {
-  opacity: 0;
-  transition: all ease 0.5s;
+h3 {
+  top: 25;
 }
-.appear-right {
-  animation: appear-right 1.5s;
+.w-25 {
+  width: 25%;
 }
-@keyframes appear-right {
-  0% {
-    transform: translateX(50%);
-  }
-  100% {
-    transform: translateX(0);
-  }
+.h-25 {
+  height: 25%;
 }
-/* fotos */
+.card {
+  background-color: rgba(137, 43, 226, 0);
+  width: 100vw;
+  height: 50vh;
+  border: none;
+}
+.card-img {
+  height: 150px;
+  width: 160px;
+  padding-bottom: 1rem;
+}
+.display-5 {
+  font-size: 1.6rem;
+}
+.display-number {
+  font-size: 1.2rem;
+}
+/* ubicaciÃ³n */
+.ubicacion {
+  height: min-content;
+}
+.line {
+  /* height: 20px; */
+  padding-top: 1%;
+  width: 200px;
+}
+.container-ubicaciones {
+  width: 70%;
+  padding: 1rem;
+  margin-top: 2rem;
+}
+.img-ubicaciones {
+  border-radius: 100%;
+  width: 200px;
+  height: 200px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+}
+.bg-gold {
+  background-color: rgb(168, 143, 105) !important;
+}
+button {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  transition: ease-out 2s;
+}
+button:hover {
+  transform: scale(1.05);
+}
+.owl-nav {
+  color: rgba(27, 27, 26, 0.575);
+  display: flex;
+  font-size: 2rem;
+  margin-top: 0px !important;
+  justify-content: space-between;
+}
+.icon-img {
+  height: 100px;
+  width: 30% !important;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+.owl-container {
+  width: 100%;
+}
+.w-30 {
+  width: 30%;
+}
+/* segundo window */
 .window-back {
-  height: 100vh;
-  margin: 0;
-  padding: 0;
-  background-image: url("./assets/img/chofis/naty-3.jpeg");
+  height: 40vh;
+  max-width: 100%;
+  background-image: url("./assets/img/esposos9.jpg");
   background-size: cover;
-  background-repeat: no-repeat;
   background-attachment: fixed;
+  background-repeat: no-repeat;
   background-position: center;
 }
 .window {
-  height: 100vh;
+  height: 40vh;
   margin: 0;
   padding: 0;
-  background-image: url("./assets/img/chofis/naty-4.jpeg");
+  background-color: rgba(0, 0, 0, 0);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: top;
 }
-.animate-image {
-  opacity: 0;
-  transition: all ease 0.8s;
+.w-90 {
+  width: 85%;
 }
-.test-class {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
+/* nuestro-inicio */
+.nuestro-inicio {
+  background-color: rgb(197, 166, 119);
 }
-.bg-dark-black {
-  background-color: rgb(214, 173, 202);
-}
-
-.appear-image {
-  animation: appear-image 0.9s;
-}
-.hide {
-  visibility: hidden;
-  max-height: 0vw;
-}
-.invitacion {
-  width: 100vw;
-}
-.visibility {
-  visibility: hidden;
-}
-.avoiding-scroll {
+.nuestro-inicio img {
+  width: 95vw;
   height: 100%;
-  overflow: hidden;
+  border: solid 2px whitesmoke;
+  border-radius: 5px;
 }
-.home7 {
-  height: 100%;
-  z-index: 2;
-  padding: 3.5rem 1rem;
-}
-.carrousel-img {
-  width: 220px;
-  height: 240px;
-  margin-bottom: 2rem;
-  margin-left: 0rem;
-  margin-right: 0rem;
-}
-
-/* asistencia */
-.home8 {
-  height: 60vh;
-  margin: 0;
-  padding: 0;
-  background-image: linear-gradient(
-      rgba(5, 7, 12, 0.274),
-      rgba(5, 7, 12, 0.171)
-    ),
-    url("./assets/img/chofis/naty-5.jpeg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  position: relative;
+.text {
+  width: 80%;
 }
 /* regalos */
-@keyframes appear-image {
-  0% {
-    transform: translateY(-100%);
-  }
-  100% {
-    transform: translateY(0);
-  }
+.w-80 {
+  width: 80%;
 }
-.bg-pink {
-  background-color: rgba(216, 152, 167, 0.763);
+.text2 {
+  width: 50%;
 }
-.pt-8 {
-  padding-top: 8rem;
-}
-.home9 {
-  height: 90vh;
-  margin: 0;
-  padding: 0;
-  background-image: linear-gradient(
-      rgba(5, 7, 12, 0.274),
-      rgba(5, 7, 12, 0.171)
-    ),
-    url("./assets/img/chofis/naty-6.jpeg");
+.window-regalos {
+  height: min-content;
+  max-width: 100%;
+  background-image: url("./assets/img/esposos4.jpg");
   background-size: cover;
+  background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center;
-  position: relative;
 }
-.display-4 {
-  font-size: 2.5rem !important;
+.btn {
+  white-space: normal !important;
 }
-button {
-  padding: 1rem;
-}
-.appear-left {
-  animation: appear-left 1s;
+a:hover {
+  text-decoration: none;
 }
 
-.animate-left {
-  opacity: 0;
-  transition: all ease 0.5s;
+.card-regalos {
+  margin: 2rem 0;
+  height: 80%;
+  width: 100%;
+  background-color: rgba(245, 245, 245, 0.568);
+}
+.logo-liverpool {
+  width: 150px;
+}
+.icon-sobre {
+  font-size: 5.5rem;
+}
+.bg-gray {
+  background-color: rgba(189, 188, 188, 0.29);
 }
 
-@keyframes appear-left {
-  0% {
-    transform: translateX(-50%);
-  }
-  100% {
-    transform: translateX(0);
-  }
+/* last window back */
+.last-window-back {
+  height: 100vh;
+  max-width: 100%;
+  background-image: url("./assets/img/esposos1.jpg");
+  background-size: cover;
+  -webkit-background-size: cover; /* Para Safari y Chrome antiguos */
+  -moz-background-size: cover; /* Para Firefox */
+  -o-background-size: cover; /* Para Opera */
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: center;
 }
-
-footer a {
-  color: rgb(221, 213, 220);
-  text-shadow: 1px 1px 1px rgba(20, 17, 17, 0.747);
+.pt-3rem {
+  padding-top: 3rem;
 }
-
-@media (min-width: 320px) {
-  .img1 {
-    width: 85%;
-  }
-  .img2 {
-    width: 95%;
-  }
-  .carrousel-img {
-    width: 270px;
-    height: 310px;
-    margin-left: 1rem;
-    margin-right: 1rem;
-  }
-  .tira {
-    width: 300px;
-  }
-  .display-1 {
-    font-size: 4rem !important;
-  }
+.linksfiltro {
+  text-decoration: underline;
+  color: #465260 !important;
 }
+.justify-content-evenly {
+  justify-content: space-evenly;
+}
+.last-container {
+  font-size: 12px;
 
+  height: 3vh;
+  width: 100%;
+  background-color: rgb(238 238 238 / 8%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: center;
+  z-index: 9;
+}
+.display-2 {
+  font-size: 2.8rem;
+}
 @media (min-width: 470px) {
-  .img1 {
-    width: 60%;
+  .title-principal {
+    font-size: 3.5rem;
   }
-  .tira {
-    width: 400px;
+  .btn-open img {
+    height: 50%;
+    width: 50%;
   }
-  .display-1 {
-    font-size: 5rem !important;
+  .nuestro-inicio img {
+    width: 450px;
+    height: 350px;
   }
-  .phrase {
-    width: 70%;
+  .icon-sobre {
+    font-size: 7rem;
   }
-  .img2 {
-    width: 70%;
+  .card-img {
+    height: 200px;
+    width: 160px;
   }
-  .display-6 {
-    font-size: 2.5rem;
+  .logo-liverpool {
+    width: 200px;
   }
-  .carrousel-img {
-    width: 370px;
-    height: 410px;
-    margin-left: 1rem;
-    margin-right: 1rem;
+  .w-90 {
+    width: 80%;
   }
-  .display-4 {
-    font-size: 3rem !important;
+  .display-2 {
+    font-size: 3.5rem;
+  }
+  .display-5 {
+    font-size: 1.3rem;
   }
 }
+
 @media (min-width: 760px) {
-  .img1 {
-    width: 40%;
+  .title-principal {
+    font-size: 5.5rem;
   }
-  .display-1 {
-    font-size: 5.5rem !important;
-  }
-  .phrase {
-    width: 60%;
-  }
-  .img2 {
-    width: 60%;
-  }
-  .cuenta {
-    width: 60%;
-  }
-  .ubicacion {
-    height: 50vh;
-  }
-  .carrousel-img {
-    width: 370px;
-    height: 410px;
-    margin-bottom: 4rem;
-    margin-left: 4rem;
-    margin-right: 4rem;
+  .btn-open img {
+    height: 55%;
+    width: 55%;
   }
   .display-4 {
-    font-size: 3.2rem !important;
+    font-size: 3.6rem;
+  }
+
+  .cuenta-regresiva {
+    font-size: 1.3rem;
+  }
+  .owl-container {
+    width: 60%;
+  }
+  .text {
+    width: 50%;
+  }
+  .nuestro-inicio img {
+    width: 600px;
+    height: 500px;
+  }
+  .card-regalos {
+    width: 80%;
+  }
+  .logo-liverpool {
+    width: 250px;
+    margin-bottom: 2rem;
+  }
+  .w-90 {
+    width: 60%;
+  }
+  .display-2 {
+    font-size: 4.5rem;
+  }
+  .display-5 {
+    font-size: 1.4rem;
   }
 }
 @media (min-width: 1020px) {
-  .img1 {
-    width: 40%;
+  .name {
+    width: 70%;
+    padding-right: 0 !important;
   }
-  .tira2 {
-    display: initial;
+  .z-index-3 {
+    position: absolute;
+    bottom: 30;
+    top: 0;
+    height: 70vh;
+    z-index: 3;
+    display: block;
+    max-width: 100%;
+    min-width: 100%;
+    border-style: none;
+    background-position: center;
   }
-  .display-1 {
-    font-size: 6.5rem !important;
+  .z-index-2 {
+    position: absolute;
+    bottom: 0;
+    height: 100vh;
+    z-index: 2;
+    display: block;
+    max-width: 100%;
+    min-width: 100%;
+    border-style: none;
   }
-  .phrase {
-    width: 50%;
+  .btn-open img {
+    height: 70%;
+    width: 70%;
   }
-  .img2 {
-    width: 40%;
+  .card {
+    height: 45vh;
   }
-  .cuenta {
-    width: 50%;
+  .logo-liverpool {
+    width: 250px;
   }
-  .display-4 {
-    font-size: 3.6rem !important;
+  .owl-container {
+    width: 30%;
+  }
+  .w-90 {
+    width: 45%;
+  }
+  .display-2 {
+    font-size: 5.5rem;
+  }
+  .display-5 {
+    font-size: 1.6rem;
   }
 }
