--- a/styles.css
+++ b/styles.css
@@ -348,7 +348,7 @@ button:hover {
 .window-back {
   height: 40vh;
   max-width: 100%;
-  background-image: url("./assets/img/esposos9.jpg");
+  background-image: url("./assets/img/pexels-jasmine-carter-888899.jpg");
   background-size: cover;
   background-attachment: fixed;
   background-repeat: no-repeat;
