--- a/styles.css
+++ b/styles.css
@@ -95,9 +95,9 @@
   outline: none;
 }
 .btn-open img {
-  height: 40%;
-  width: 40%;
-  padding-bottom: 4rem;
+  height: 30%;
+  width: 30%;
+  padding-left: 10px;
 }
 .hide {
   visibility: hidden;
@@ -126,9 +126,9 @@
   background-position: top;
 }
 .name {
-  width: 80%;
+  width: 90%;
   padding-right: 0;
-  padding-top: 7rem;
+  padding-top: 50%;
 }
 /* audio */
 .player-audio {
@@ -348,7 +348,7 @@ button:hover {
 .window-back {
   height: 40vh;
   max-width: 100%;
-  background-image: url("./assets/img/pexels-jasmine-carter-888899.jpg");
+  background-image: url("./assets/img/esposos10.jpg");
   background-size: cover;
   background-attachment: fixed;
   background-repeat: no-repeat;
@@ -373,7 +373,6 @@ button:hover {
 .nuestro-inicio img {
   width: 95vw;
   height: 100%;
-  border: solid 2px whitesmoke;
   border-radius: 5px;
 }
 .text {
@@ -385,6 +384,21 @@ button:hover {
 }
 .text2 {
   width: 50%;
+}
+.names {
+  letter-spacing: 2px;
+  padding: 0 2rem;
+}
+.gallery .owl-nav {
+  display: none;
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  color: white;
+}
+.gallery .owl-carousel .owl-nav button.owl-next,
+.owl-carousel .owl-nav button.owl-prev {
+  outline-style: none;
 }
 .window-regalos {
   height: min-content;
@@ -443,10 +457,10 @@ a:hover {
 }
 .last-container {
   font-size: 12px;
-
+  color: #ffffff69;
   height: 3vh;
   width: 100%;
-  background-color: rgb(238 238 238 / 8%);
+  background-color: rgb(67 65 65);
   display: flex;
   justify-content: center;
   align-items: center;
