--- a/styles.css
+++ b/styles.css
@@ -122,6 +122,9 @@
     ),
     url("./assets/img/esposos2.jpg");
   background-size: cover;
+  -webkit-background-size: cover; /* Para Safari y Chrome antiguos */
+  -moz-background-size: cover; /* Para Firefox */
+  -o-background-size: cover; /* Para Opera */
   background-repeat: no-repeat;
   background-position: top;
 }
@@ -166,6 +169,9 @@
   max-width: 100%;
   background-image: url("./assets/img/andre-jackson-IXLS59CTgDE-unsplash.jpg");
   background-size: cover;
+  -webkit-background-size: cover; /* Para Safari y Chrome antiguos */
+  -moz-background-size: cover; /* Para Firefox */
+  -o-background-size: cover; /* Para Opera */
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: bottom;
@@ -264,6 +270,9 @@ hr {
     ),
     url("./assets/img/salon3.jpg");
   background-size: cover;
+  -webkit-background-size: cover; /* Para Safari y Chrome antiguos */
+  -moz-background-size: cover; /* Para Firefox */
+  -o-background-size: cover; /* Para Opera */
   background-repeat: no-repeat;
   background-position: bottom;
 }
@@ -350,6 +359,9 @@ button:hover {
   max-width: 100%;
   background-image: url("./assets/img/esposos10.jpg");
   background-size: cover;
+  -webkit-background-size: cover; /* Para Safari y Chrome antiguos */
+  -moz-background-size: cover; /* Para Firefox */
+  -o-background-size: cover; /* Para Opera */
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center;
@@ -360,6 +372,9 @@ button:hover {
   padding: 0;
   background-color: rgba(0, 0, 0, 0);
   background-size: cover;
+  -webkit-background-size: cover; /* Para Safari y Chrome antiguos */
+  -moz-background-size: cover; /* Para Firefox */
+  -o-background-size: cover; /* Para Opera */
   background-repeat: no-repeat;
   background-position: top;
 }
@@ -405,6 +420,9 @@ button:hover {
   max-width: 100%;
   background-image: url("./assets/img/esposos4.jpg");
   background-size: cover;
+  -webkit-background-size: cover; /* Para Safari y Chrome antiguos */
+  -moz-background-size: cover; /* Para Firefox */
+  -o-background-size: cover; /* Para Opera */
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center;
