--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,16 @@
 .max-w-90 {
   max-width: 100vw;
 }
+
+.pulse {
+  padding: 2px 5px;
+  border-radius: 5px;
+  background: #dcdcdc45;
+  width: max-content;
+  text-align: center;
+  color: #9b7a59;
+}
+
 .avoiding-scroll {
   height: 100%;
   overflow: hidden;
@@ -83,6 +93,11 @@
 }
 
 .btn-open {
+  margin-top: 3rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   box-shadow: none !important;
   transition: none !important;
   position: absolute;
@@ -97,7 +112,7 @@
 .btn-open img {
   height: 30%;
   width: 30%;
-  padding-left: 10px;
+  padding-left: 5px;
 }
 .hide {
   visibility: hidden;
